--- a/ToDoListApi/appsettings.json
+++ b/ToDoListApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BlazorTodoListDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SqlExpress;Database=BlazorTodoListDb;Trusted_Connection=True;MultipleActiveResultSets=true; TrustServerCertificate=true;"
   },
   "AllowedHosts": "*"
 }
