--- a/ToDoListProject/ToDoListProject.csproj
+++ b/ToDoListProject/ToDoListProject.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <WatchOnLaunch>true</WatchOnLaunch>
   </PropertyGroup>
 
   <ItemGroup>
