Added Json Web Token

--- a/ToDoListApi/appsettings.json
+++ b/ToDoListApi/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "Key": "YourSecretKeyHereeeeYourSecretKeyHereeee",
+    "Issuer": "localhost:7291",
+    "Audience": "localhost:44398"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
